<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tower of Wisdom</string>
    <string name="app_leaderboard">Leaderboard</string>
    <string name="app_profile_view">Player Profile</string>
    <string name="app_profile">Profile Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    
    <string name="loading">Loading..</string>
    <string name="action_play">Play</string>
    
    <string name="tvQuestion">Question to be asked?</string>
    <string name="radio_option">Option</string>

    <string name="tvTimer">10</string>
    <string name="tvUser">Guest</string>
    <string name="tvScore">Score: 0</string>
    <string name="tvLevel">Level: 1</string>
    
    <string name="action_settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_profile">User Profile</string>
    
    <string name="action_lifelines">Lifelines</string>
    <string name="action_simplify">Simplify</string>
    <string name="action_time_extender">Extra Time</string>
    
    <string name="tvUsername">Username</string>
    <string name="tvDifficulty">Difficulty</string>
    <string name="rbEasy">Easy</string>
    <string name="rbIntermediate">Intermediate</string>
    <string name="rbDifficult">Difficul</string>
    <string name="tvAvator">Avator</string>        
    <string name="btUpdate">Update</string>        

    <string name="tvLeaderRanking">Player currently ranked #100</string>
    
    <string name="tvProfileUsername">Username: Guest</string>
    <string name="tvProfilePoints">Points: 100</string>
    
</resources>
