<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tow.MainActivity" >

    <item
        android:id="@+id/action_mainmenu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/main_menu" />

    <item
        android:id="@+id/action_play"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_play" />

    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_leaderboard" />
    
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_preferences" />
    
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/menu_profile" />
    
</menu>