<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvUsername"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDifficulty" />

    <RadioGroup
        android:id="@+id/rgDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbEasy" />

        <RadioButton
            android:id="@+id/rbIntermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbIntermediate" />

        <RadioButton
            android:id="@+id/rbDifficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDifficult" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAvator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAvator" />

    <ImageView
        android:id="@+id/ivAvator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tvAvator"
        android:layout_gravity="center"
        android:src="@drawable/ic_action_user" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btUpdate" />

</LinearLayout>
