<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/leaderboard_list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

	<LinearLayout android:id="@+id/thumbnail" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"		
        android:layout_alignParentLeft="true"
        android:background="@drawable/image_bg" 
	    android:layout_marginRight="5dip">
        
		<ImageView     
			android:id="@+id/list_image"   
	        android:layout_width="50dip"
	        android:layout_height="50dip"
	        android:contentDescription="@string/app_profile"
	        android:src="@drawable/userprofile"/>
        
	</LinearLayout>
    
    <TextView
        android:id="@+id/tvLeaderUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/tvUser"
        android:textColor="#040404"
        android:typeface="sans" 
        android:textSize="17sp"
        android:textStyle="bold"/>
	
    <TextView
        android:id="@+id/tvLeaderRanking"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLeaderUsername"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/tvLeaderRanking" />

    <TextView
        android:id="@+id/tvLeaderScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvLeaderUsername"
        android:gravity="right"
        android:text="@string/tvScore"
        android:layout_marginRight="5dip"
        android:textSize="12sp"
        android:textColor="#10bcc9"
        android:textStyle="bold"/>
      
     <ImageView android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:src="@drawable/arrow"
     	android:layout_alignParentRight="true"
     	android:contentDescription="@string/tvUser"
     	android:layout_centerVertical="true"/>

</RelativeLayout>