<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tow.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuestion" />

    <RadioGroup
        android:id="@+id/rgAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvQuestion"
        android:layout_below="@+id/tvQuestion" >

        <RadioButton
            android:id="@+id/rbAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_option" />

        <RadioButton
            android:id="@+id/rbAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_option" />

        <RadioButton
            android:id="@+id/rbAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_option" />

        <RadioButton
            android:id="@+id/rbAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_option" />
        </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/rgAnswers"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar1"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_marginBottom="23dp"
        android:layout_marginRight="22dp"
        android:text="@string/tvTimer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
